# keyvault

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.agent/skills/secrets-manager/: SKILL.md
.agents/skills/keyvault-skill/: SKILL.md
.agents/skills/secrets-manager/: SKILL.md
keyvault/: __init__.py  __main__.py  cli.py  crypto.py  envscan.py  fs.py  mcp_policy.py  mcp_server.py  models.py  store.py  validation.py
keyvault-skill/: SKILL.md
tests/: conftest.py  test_cli_export_permissions.py  test_cli_scan_env.py  test_dotenv_roundtrip.py  test_master_key_safety.py  test_mcp_policy.py  test_store_migration.py
