[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keyvault-ai"
version = "0.1.0"
description = "Lightweight secrets manager for LLM Agents. Manage API keys across Skills, MCP Servers, and CLI tools."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "V-maker Team"}
]
keywords = ["llm", "secrets", "api-keys", "mcp", "agent", "keyvault"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio"]
all = ["keyvault-ai[mcp,dev]"]

[project.scripts]
keyvault = "keyvault.cli:app"

[project.urls]
Homepage = "https://github.com/user/keyvault"
Repository = "https://github.com/user/keyvault"

[tool.setuptools.packages.find]
include = ["keyvault*"]
